fix table formatting; show whole  table with no scrollbar

--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -246,6 +246,6 @@ article a[target="_blank"]:after {
   font-family: 'Inter SemiBold', 'Roboto', sans-serif;
 }
 
-.token_address_table {
-  width: fit-content;
+article table {
+  overflow: visible;
 }
